--- a/chp5/chp5.vcxproj.filters
+++ b/chp5/chp5.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="border.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="border_test.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\grade.h">
@@ -42,6 +45,12 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="..\student_info.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="split.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="border.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
